--- a/jaeger-open-tracing-csharp/jaeger-open-tracing-csharp/JaegerOpenTrace.csproj
+++ b/jaeger-open-tracing-csharp/jaeger-open-tracing-csharp/JaegerOpenTrace.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="OpenTracing.Contrib.NetCore" Version="0.6.2" />
     <PackageReference Include="Serilog" Version="2.9.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
   </ItemGroup>
 
 
